changed layout css

--- a/_posts/2013-10-12-test.md
+++ b/_posts/2013-10-12-test.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "博客搭建测试"
-description: "这篇文章作测试用"
-category: test
+description: "这篇文章作博客测试用"
+category: Test
 tags: [test]
 ---
 
