test for the tags and categories

--- a/_posts/2013-10-12-test.md
+++ b/_posts/2013-10-12-test.md
@@ -2,8 +2,9 @@
 layout: post
 title: "博客搭建测试"
 description: "这篇文章作博客测试用"
-category: Test
-tags: [test]
+category:[Test,Wang,Ham]
+tags:[test,ham,more]  
+
 ---
 
 	for i in range(0,5):
