--- a/404.md
+++ b/404.md
@@ -5,12 +5,11 @@ layout: home
 
 ###通知：  
 本博客最近正在调整，有可能导致原来的某些文章链接失效。  
-请点击这里[homepage](/)寻找。
+请点击这里[Homepage](/)寻找。
 
 
 Error 404. Nothing found :( 
 
-Please go to [homepage](/) or Contact Me:
-
-    hamniba8@gmail.com
+Please go to [Homepage](/)   
+or Contact Me: <hamniba8@gmail.com>
 
