--- a/_posts/2013-10-12-test.md
+++ b/_posts/2013-10-12-test.md
@@ -1,10 +1,9 @@
 ---
 layout: post
 title: "博客搭建测试"
-description: "这篇文章作博客测试用"
-category:[Test,Wang,Ham]
-tags:[test,ham,more]  
-
+description:
+category: Test Wang Ham
+tags: test ham more
 ---
 
 	for i in range(0,5):
