--- a/_posts/2013-10-12-test.md
+++ b/_posts/2013-10-12-test.md
@@ -2,8 +2,8 @@
 layout: post
 title: "博客搭建测试"
 description:
-category: Test Wang Ham
-tags: test ham more
+category: 
+tags: 
 ---
 
 	for i in range(0,5):
