--- a/_posts/2013-10-12-test.md
+++ b/_posts/2013-10-12-test.md
@@ -1,10 +1,12 @@
 ---
 layout: post
-title: "博客搭建测试"
+title: <center>"博客搭建测试"</center>
 description:
 category: 
 tags: 
 ---
 
+	{% highlight python %}
 	for i in range(0,5):
 		print ("*")
+	{% endhighlight python%}
