--- a/_posts/2013-10-12-test.md
+++ b/_posts/2013-10-12-test.md
@@ -10,3 +10,13 @@ tags:
 	for i in range(0,5):
 		print ("*")
 	{% endhighlight python%}
+
+
+
+<br/>
+<br/>
+<br/>
+####What update to the blog template:  
+- changed the font family
+- changed the background-color of the code block
+- added the (cc)BY-NC-SA license ![BY-NC-SA](http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png)
