--- a/_posts/2013-10-12-test.md
+++ b/_posts/2013-10-12-test.md
@@ -19,4 +19,4 @@ tags:
 ####What update to the blog template:  
 - changed the font family
 - changed the background-color of the code block
-- added the (cc)BY-NC-SA license ![BY-NC-SA](http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png)
+- added the (cc)BY-NC-SA license image
