--- a/404.md
+++ b/404.md
@@ -2,10 +2,10 @@
 title: 404
 layout: home
 ---
-
+<br/>
 ###通知：  
 本博客最近正在调整，有可能导致原来的某些文章链接失效。  
-请点击这里[Homepage](/)寻找。
+请点击这里[Homepage](/)找回。
 
 
 Error 404. Nothing found :( 
