--- a/_posts/2013-10-12-test.md
+++ b/_posts/2013-10-12-test.md
@@ -9,14 +9,19 @@ tags:
 	{% highlight python %}
 	for i in range(0,5):
 		print ("*")
-	{% endhighlight python%}
+	{% endhighlight %}
 
 
+###jekyll本地调试指令  
+1. cd 欲调试代码所在路径
+2. jekyll server --watch
+3. 访问 localhost:4000  
 
+加上`--watch`，就能方便地在本地更改代码之后实时显示，不用再重启server。
 <br/>
 <br/>
 <br/>
-####What update to the blog template:  
+####WHAT UPDATE TO THE BLOG TEMPLATE  
 - changed the font family
 - changed the background-color of the code block
 - added the (cc)BY-NC-SA license image
